added functionality for client socket server : 1) Initiate Server 2) Initiate & Clear session 3) Authentication stage based socket handling

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -18,3 +18,7 @@ dbUser = "postgres"
 dbPassword = "root"
 client_encoding = "utf8"
 
+# Client Server configuration
+clientServerPort = "9876"
+clientServerHost = "localhost"
+
