--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/tauksun/postgrancer#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "libpg-query": "^15.0.2"
+    "libpg-query": "^15.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
