added function to initiate authentication & sending scram mechanism name from postgrancer to client

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -1,5 +1,6 @@
 # Postgrancer Version 
 version = "1.0.0"
+protocol = "196608"
 
 # Databases Configuration 
 # Primary Database Configuration 
@@ -16,6 +17,12 @@ replicaDatabaseConnectionPool = "4,2"
 dbName = "postgrancer"
 dbUser = "postgres"
 dbPassword = "root"
+
+# Multiple DBs Configuration 
+dbs=""
+dbUsers=""
+dbPasswords=""
+
 client_encoding = "utf8"
 
 # Client Server configuration
