client side authentication : continue sasl stage - done, final sasl stage - fone

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -1,6 +1,7 @@
 # Postgrancer Version 
 version = "1.0.0"
 protocol = "196608"
+scramIterations = "4096"
 
 # Databases Configuration 
 # Primary Database Configuration 
