functionality to dequeue requests from setTimeout queue after n seconds, if no dbConnection is not available

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -30,3 +30,5 @@ client_encoding = "utf8"
 clientServerPort = "9876"
 clientServerHost = "localhost"
 
+# Dequeue Request Time In Seconds
+dequeue_request_time = "3"
