logger for saving query logs

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -32,3 +32,8 @@ clientServerHost = "localhost"
 
 # Dequeue Request Time In Seconds
 dequeue_request_time = "3"
+
+# logger (true/false)
+logger=true
+# Logging frequency (minute/hour/day) : Creates new log file as set by frequency, defaults to hour
+logFrequency='hour'
