--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -36,4 +36,10 @@ dequeue_request_time = "3"
 # logger (true/false)
 logger=true
 # Logging frequency (minute/hour/day) : Creates new log file as set by frequency, defaults to hour
-logFrequency='hour'
+logFrequency="hour"
+
+# Pool Manager
+maxDbConnectionLockTime = "10"
+maxLastWroteTime = "3"
+poolManagerLoopTime = "10"
+
