--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -43,3 +43,8 @@ maxDbConnectionLockTime = "10"
 maxLastWroteTime = "3"
 poolManagerLoopTime = "10"
 
+# Watch Dog
+# Time (seconds) interval to check for database health
+watchDogLoopTime = "5"
+# Time (seconds) before promoting or removing replica
+watchDogWaitTime = "15"
