watchdog : promoting replica to primary on failure

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -6,20 +6,22 @@ scramIterations = "4096"
 # Databases Configuration 
 # Primary Database Configuration 
 primaryDatabaseHost = "localhost"
-primaryDatabasePort = "5555"
-primaryDatabaseConnectionPool = "5"
+primaryDatabasePort = "5433"
+# Max 99 (1 out of 100 connections is reserved for watchdog)
+primaryDatabaseConnectionPool = "1" 
 
 # Replica Databases Configuration 
-replicaDatabaseHosts = "localhost,localhost"
-replicaDatabasePorts = "5556,5557"
-replicaDatabaseConnectionPool = "4,2"
+replicaDatabaseHosts = "localhost"
+replicaDatabasePorts = "5434"
+# Max 99 (1 out of 100 connections is reserved for watchdog)
+replicaDatabaseConnectionPool = "1,1"
 
 # Database Configuration & Credentials 
 dbName = "postgrancer"
 dbUser = "postgres"
 dbPassword = "root"
 
-# Multiple DBs Configuration 
+ # Multiple DBs Configuration 
 dbs=""
 dbUsers=""
 dbPasswords=""
@@ -48,3 +50,22 @@ poolManagerLoopTime = "10"
 watchDogLoopTime = "5"
 # Time (seconds) before promoting or removing replica
 watchDogWaitTime = "15"
+
+####################
+# Primary Failover #
+####################
+
+# Currently cascading replication strategy is supported for failover mechanism or
+# if there are only 2 dbs configured (Primary & Replica)
+# Primary -> Replica 1 -> Replica 2 -> ......
+
+# Below details(host &  port) must match the above provided details for replicas
+# Replica details (which is to be promoted as primary)
+ 
+# Disable failover by setting "enableFailover" to false
+enableFailover = true
+replicaPromotionHost = "localhost"
+replicaPromotionPort = "5434"
+# Post Api endpoint to send information in case of a failover
+sendFailoverInformation = false
+failoverInformationEndpoint = "http://localhost/failover"
