http post request to inform on database failure

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -66,6 +66,6 @@ watchDogWaitTime = "15"
 enableFailover = true
 replicaPromotionHost = "localhost"
 replicaPromotionPort = "5434"
-# Post Api endpoint to send information in case of a failover
-sendFailoverInformation = false
+# HTTP Post Api endpoint to send information in case of a failover
+sendFailoverInformation = true
 failoverInformationEndpoint = "http://localhost/failover"
