--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/tauksun/postgrancer#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "libpg-query": "^15.0.2",
     "uuid": "^9.0.0"
