--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/tauksun/postgrancer#readme",
   "dependencies": {
-    "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "libpg-query": "^15.0.2",
+    "node-fetch": "^2.6.12",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
