ssl negotiation from environment file & first negotiation message

--- a/.postgrancer.conf
+++ b/.postgrancer.conf
@@ -69,3 +69,7 @@ replicaPromotionPort = "5433"
 # HTTP Post Api endpoint to send information in case of a failover
 sendFailoverInformation = true
 failoverInformationEndpoint = "http://localhost/failover"
+
+# SSL
+enableSSL=false
+postgresSSLIdentifier=80877103
